refactor: чистка кода
- Заменены JPQL-запросы на QueryDSL (buildAdminPredicate, buildPublicPredicate)
- Убран прямой доступ к CategoryRepository, использован CategoryService
- Исправлен порядок: sendHit перед getViewsMap, поля перед applyStateAction
- Убраны @Builder.Default из Param DTO для корректной работы @ModelAttribute
- Добавлены @Positive и @Validated в контроллеры
- Заменён .collect(Collectors.toList()) на .toList()
- Убран избыточный eventRepository.save() в updateEventByAdmin
- Вынесен LocalDateTime.now() в переменную в applyStateAction
- Добавлен containsIgnoreCase для текстового поиска
- Добавлен toUpperCase для состояний в buildAdminPredicate
- Добавлена проверка на пустой список событий перед getViewsMap
- Добавлены unit-тесты: EventMapperTest, EventServiceImplTest, контроллеры